# newgit

./: LM_fit_line.cpp  README.md  ceres_fit_line.cpp  read.txt  readme.txt
gtsam_test/: CMakeLists.txt  gtsamexamples.h
gtsam_test/cpp/: CMakeLists.txt  GPSPose2Factor.h  Point2c.h  expresshions.h  functions.cpp  functions.h
gtsam_test/cpp/examples/: Pose2SLAMExample.cpp
ransac_fitting_geometry/: common.cpp  main.cpp  test.cpp
vcourse/: CMakeLists.txt
vcourse/include/: feature_manager.h  feature_tracker.h
vcourse/include/factor/: integration_bash.h
vcourse/include/initial/: initial_alignment.h  intitial_ex_rotaion.h  solve_5pts.h
vcourse/include/utility/: utility.h
vcourse/src/: System.cc  System.h  estimator.cc  estimator.h  parameters.cc  parameters.h
vcourse_backend/src/: Systen.cc  run_euroc.cpp
